[package]
name = "warp1"
version = "0.1.0"
authors = ["ccckmit <ccckmit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4.0"
